# Claude-Code

./: ChatGPT_Instructions_Rivera_SBMDW.md  README.md  install.ps1  legal-case-manager.md  pyproject.toml
.claude/: skills.md
filings/: 2026-03-30_Opposition_Motion_to_Quash.md
legal_case_manager/: __init__.py  __main__.py  agent.py
legal_case_manager/executor/: task_executor.py
legal_case_manager/exhibits/: __init__.py  exhibit_builder.py
legal_case_manager/scanners/: __init__.py  file_scanner.py
legal_case_manager/tracker/: __init__.py  case_tracker.py
legal_case_manager/utils/: constants.py  file_utils.py
